# Relativity

./: .gitattributes  .gitignore  README.md
CSharp/: .editorconfig  .roslynatorconfig  BigFloat.cs  CLAUDE.md  EFloatHelpers.cs  EFloatRelativity.cs  FloatContext.cs  GEMINI.md  HyperbolicTrig.cs  Program.cs  Quantity.cs  README.md  Relativity.csproj  Relativity.sln  Tools.cs  UomTools.cs
Javascript/: .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_DEC2025.md  CODE_REVIEW_EQUATIONS.md  GEMINI.md  IPAD_SCROLL_MINKOWSKI_DIAGNOSTICS.md  README.md  (+15 more)
Python/: Antimatter rocket.ipynb  BALLISTICS_QUALITY_ASSESSMENT.md  BALLISTICS_SUMMARY.md  CLAUDE.md  Carbon.ipynb  CheckOutdated.cmd  Distance_time.ipynb  Dropping_buoys.ipynb  FTL Travel animation.ipynb  FTL Travel.ipynb  Falling.py  FreezeReq.cmd  GEMINI.md  InstallReq.cmd  IntervalTest.py  Projectile Trajectories - Angle Optimization.ipynb  Projectile Trajectories - Basic.ipynb  Projectile Trajectories - Supersonic.ipynb  Projectile Trajectories.ipynb  README.md  Rapidity.ipynb  Relativistic mass.ipynb  SUPERSONIC_ACCURACY_NOTES.md  Solar system.ipynb  Solar system.py  Spacetime interval.ipynb  Star distribution.ipynb  Time dilation.ipynb  TrigTests.py  Universe.ipynb  Velocity adding.ipynb  ballistics_lib.py  extra_lib.py  ftl_lib.py  galactic-stellar-density-research.md  motion_lib.py  propulsion.py  pyproject.toml  relativity_lib.py  requirements.txt  (+5 more)
rust_uom/: CLAUDE.md  Cargo.toml  GEMINI.md  README.md
rust_uom/src/: main.rs  tools.rs  tools_rational.rs
(+237 files in other folders)
