[project]
name = "relativity-python"
version = "0.1.0"
description = "Python notebooks for special relativity"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.3",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "mpmath>=1.3.0",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pip>=25.1.1",
    "prettytable>=3.16.0",
    "scipy>=1.15.3",
]

# notebook integration needs:
# uv add ipykernel pip