[package]
name = "rust_uom"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = 'fat'
strip = true

[dependencies]
anyhow = ">= 1.0.95"
uom = { version = ">= 0.36", features = ["bigrational"] }
num-rational = ">= 0.4.2"
num-traits = ">= 0.2.19"
once_cell = ">= 1.20.2"
